# color-convert-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix  run-bench-gpu.sh
.github/workflows/: ci.yml  publish.yml
.omo/run-continuation/: ses_0a2fb951cffepDcockMOzSIUM7.json  ses_0a2fe44caffeVK30cONiNWrHrT.json  ses_0a2ff88c9ffeoCQ2yaOb2y0DZO.json  ses_0a302e16affenIAfz1ZlVU8jD1.json  ses_0a305f263ffe62JwenPTzBPRHE.json  ses_0a307e1b9ffeiGbZEbS1J1xV9X.json  ses_0a30b4a50ffeXPWJlivn6xLJts.json  ses_0a30d5544ffej1MXgr1o31aGAY.json  ses_0a311b578ffeNlvmlDvDe70q2r.json  ses_0a3137da4ffeUPYzySpHxv3Rzu.json  ses_0a316b4efffeuDT4Q6om6RwQoU.json  ses_0a31c8debffeCUxgpYfTdQPwJl.json  ses_0a31ef455ffe4BKRSc7ZLWtg1X.json  ses_0a325d2abffegyBJTD3v6e3ucv.json  ses_0a3286254ffeuVTGGmq0AeygPz.json
.opencode/agent/: blue-dev.md  green-dev.md  improvement-dev.md  orchestrator.md  red-dev.md
.opencode/skills/benchmark-ledger/: SKILL.md
.opencode/skills/git-worktrees/: SKILL.md
.opencode/skills/issue-workflow/: SKILL.md
.opencode/skills/orchestrator-loop/: SKILL.md
.opencode/skills/tdd-blue/: SKILL.md
.opencode/skills/tdd-green/: SKILL.md
.opencode/skills/tdd-red/: SKILL.md
benchmarks/: README.md  SCHEMA.md  results.jsonl
benchmarks/js/: bench.mjs  gen-vectors.mjs  package-lock.json  package.json
ccrs-vault/: active-work.md  index.md
ccrs-vault/adrs/: 001-cubecl-plus-simd-over-raw-wgpu.md  002-behavior-faithful-validation-and-benchmark-honesty.md  003-feature-gating.md  004-npm-wasm-performance.md  005-image-processing-pivot.md  006-napi-auto-tier.md
ccrs-vault/articles/: thread-01-the-port.md  thread-02-the-agentic-process.md
ccrs-vault/engineering/: 00-benchmark-methodology.md  01-optimization-journey.md  02-publish-readiness.md  03-image-batch-api.md  04-napi-auto-tier.md
docs/: ARCHITECTURE_REVIEW.md
examples/: basic_convert.rs  batch_simd.rs  image_to_lab.rs
js/: .gitignore  README.md  bench-batch.mjs  bench-comprehensive.mjs  bench-hybrid.mjs  bench-napi.cjs  bench.mjs  build.sh  color_convert_rs.d.ts  color_convert_rs.js  example.js  index.d.ts  index.js  js-routes.js  package-lock.json  package.json  test-parity.mjs
src/: ansi16.rs  ansi256.rs  apple.rs  batch.rs  cmyk.rs  color_name.rs  convert.rs  error.rs  gpu.rs  gray.rs  hcg.rs  hex.rs  hsl.rs  hsv.rs  hwb.rs  keyword.rs  lab.rs  lch.rs  lib.rs  napi.rs  oklab.rs  oklch.rs  probe.rs  rgb.rs  simd.rs  simd_apple.rs  simd_cmyk.rs  simd_hcg.rs  simd_hsl.rs  simd_hsv.rs  simd_hsv_rgb.rs  simd_hwb.rs  simd_lab_xyz.rs  simd_oklab.rs  simd_oklab_rgb.rs  simd_parallel.rs  simd_xyz.rs  wasm.rs  xyz.rs
tests/: ansi16_routes.rs  ansi256_routes.rs  apple_routes.rs  batch_stride.rs  bench_lab_cmyk.rs  cmyk_routes.rs  convert_batch_routes.rs  convert_routes.rs  convert_types.rs  error_type.rs  find_path.rs  gpu_kernel.rs  gray_routes.rs  hcg_routes.rs  hex_routes.rs  hsl_routes.rs  hsv_routes.rs  hwb_routes.rs  keyword_routes.rs  lab_routes.rs  lch_routes.rs  oklab_routes.rs  oklch_routes.rs  probe_routes.rs  rgb_encoder_routes.rs  rgb_routes.rs  simd_apple_routes.rs  simd_cmyk_routes.rs  simd_hcg_routes.rs  simd_hsl_routes.rs  simd_hsv_rgb_routes.rs  simd_hsv_routes.rs  simd_hwb_routes.rs  simd_oklab_rgb_routes.rs  simd_parallel_routes.rs  simd_routes.rs  vector_harness.rs  xyz_routes.rs
tests/harness/: mod.rs
tests/vectors/: ansi16_to_rgb.json  ansi256_to_rgb.json  apple_to_rgb.json  cmyk_to_hsl.json  cmyk_to_hsv.json  cmyk_to_keyword.json  cmyk_to_rgb.json  gray_to_cmyk.json  gray_to_hex.json  gray_to_hsl.json  gray_to_hsv.json  gray_to_hwb.json  gray_to_lab.json  gray_to_rgb.json  hcg_to_hsl.json  hcg_to_hsv.json  hcg_to_hwb.json  hcg_to_lab.json  hcg_to_rgb.json  hex_to_rgb.json  hsl_to_hcg.json  hsl_to_hex.json  hsl_to_hsv.json  hsl_to_lab.json  hsl_to_rgb.json  hsv_to_ansi16.json  hsv_to_hcg.json  hsv_to_hsl.json  hsv_to_rgb.json  hsv_to_xyz.json  hwb_to_hcg.json  hwb_to_hsl.json  hwb_to_rgb.json  keyword_to_rgb.json  lab_to_ansi16.json  lab_to_hsl.json  lab_to_lch.json  lab_to_rgb.json  lab_to_xyz.json  lch_to_lab.json  (+23 more)
