[package]
name = "color-convert-rs"
version = "0.1.0"
edition = "2024"
description = "Behavior-faithful Rust port of npm color-convert with CPU-SIMD (f32x8) and optional GPU (CubeCL) acceleration"
license = "MIT"
repository = "https://github.com/vitorpavani/color-convert-rs"
homepage = "https://github.com/vitorpavani/color-convert-rs"
documentation = "https://docs.rs/color-convert-rs"
keywords = ["color", "color-convert", "rgb", "hsl", "simd"]
categories = ["graphics", "multimedia::images", "science"]
readme = "README.md"
exclude = [
    "/.worktrees",
    "/.opencode",
    "/.omo",
    "/.gitignore",
    "/.github",
    "/AGENTS.md",
    "/benchmarks",
    "/docs",
    "/ccrs-vault",
    "/js",
    "/pkg",
    "/run-bench-gpu.sh",
    "/.envrc",
    "/flake.nix",
    "/flake.lock",
]

[features]
default = []
# GPU compute path via CubeCL / wgpu. Enables the runtime GPU probe and the
# CubeCL kernels in `src/gpu.rs`. Without this feature the library uses the
# CPU-SIMD path exclusively and `probe()` always returns `Backend::CpuSimd`.
gpu = ["dep:wgpu", "dep:pollster", "dep:cubecl", "dep:bytemuck"]
# Native Node.js addon via napi-rs. Eliminates the wasm boundary overhead.
napi = ["dep:napi", "dep:napi-derive"]
# Integration with the `image` crate — provides `batch::image::to_lab()` etc.
image = ["dep:image"]

[lib]
name = "color_convert_rs"
crate-type = ["rlib", "cdylib"]

# Benchmark binaries — dev/CI tools, not part of the published library surface.
# `bench_gpu` needs the GPU feature; the others only need `probe::gpu_present()`
# (always available) but are listed explicitly so they are not auto-discovered
# by consumers that depend on this crate.
[[bin]]
name = "bench"
required-features = ["gpu"]

[[bin]]
name = "bench_gpu"
required-features = ["gpu"]

[[bin]]
name = "bench_simd_parallel"
required-features = ["gpu"]

[[bin]]
name = "bench_simd"
required-features = ["gpu"]

[[bin]]
name = "bench_chunk_tuning"
required-features = ["gpu"]

# GPU integration test — only compiled when the `gpu` feature is enabled.
[[test]]
name = "gpu_kernel"
required-features = ["gpu"]

[dependencies]
# Derive-based library error enum: library code returns Result<_, Error> with
# no unwrap()/expect() in lib paths (Rule 9: issue #4).
thiserror = "2.0.17"
# Portable explicit SIMD for batch matrix math (Rule 9: issue #20).
wide = "1.5"

# Multi-core parallelism for SIMD batch routes via work-stealing thread pool.
# Each core runs 8-wide f32x8 SIMD on a chunk; rayon spreads chunks across
# cores with order-stable par_chunks. (Rule 9: issue #110)
rayon = "1"

# --- GPU-only deps (optional, behind the `gpu` feature) ---

# Runtime GPU capability probe: at startup, enumerate wgpu adapters to decide
# whether the GPU compute path (CubeCL via wgpu) is available, or whether to
# fall back to the CPU-SIMD path. Only Instance creation and adapter enumeration
# are used — no rendering, shaders, or device creation. (Rule 9: issue #21)
wgpu = { version = "30.0.0", optional = true }

# Blocking executor for the wgpu async adapter-enumeration future.
# Tiny (<1K LOC), single-purpose crate — no executor framework pulled in.
# Used only in the one-shot probe; not a general-purpose async dependency.
# (Rule 9: issue #21)
pollster = { version = "0.4", optional = true }

# Multi-platform high-performance compute language extension for Rust.
# Used for the GPU batch color conversion kernel (rgb→lab) via the wgpu
# backend. Only the runtime client creation, upload, kernel launch, and
# read-back APIs are used — no custom wgsl shaders or manual pipeline
# configuration. (Rule 9: issue #22 — CubeCL GPU kernel for batch color
# conversion)
cubecl = { version = "0.10", features = ["wgpu"], optional = true }

# Tiny, zero-copy typed-cast library for reinterpreting byte slices as
# typed f32/u8 slices without unsafe transmutes. Required by CubeCL's
# `create_from_slice` (which expects bytemuck::Pod input) and for
# casting the read-back byte buffer into f32 pixel data.
# (Rule 9: issue #22 — GPU kernel data upload/readback)
bytemuck = { version = "1", optional = true }

# --- native Node.js addon (optional, behind the `napi` feature) ---
napi = { version = "2", features = ["napi8"], optional = true }
napi-derive = { version = "2", optional = true }

# --- image crate integration (optional, behind the `image` feature) ---
image = { version = "0.25", optional = true, default-features = false, features = ["jpeg", "png"] }

[profile.release]
lto = true

[dev-dependencies]
# Parametric test-case runner for the vector harness (Rule 9: issue #3).
rstest = "0.26.1"
# Typed deserialization of tests/vectors/*.json into harness structs (Rule 9: issue #3).
serde = { version = "1.0.228", features = ["derive"] }
# JSON parsing of the committed JS-generated reference vectors (Rule 9: issue #3).
serde_json = "1.0.150"
